24 July 2024: -CRUD update function complete -resolved form responsive layout issue -WIP (Post Announcement Module 75% done)

--- a/public/style.css
+++ b/public/style.css
@@ -245,3 +245,8 @@ body {
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
+
+/* isolate forms for proper responsive elements */
+body.form {
+    display: block;
+}
