--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -207,3 +207,8 @@ body {
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
+
+/* isolate forms for proper responsive elements */
+body.form {
+    display: block;
+}
